
171123 Martin Raden :
 * bin/CommandLineParsing :
   * getThreads() :
     * returns threads.max if threads.val == 0
   * threads :
     * min value = 0 (request maximal number of threads)
     * parameter docu updated accordingly

171123 Martin Raden :
 * bin/CommandLineParsing :
   * validate_outputTarget() :
     + check whether or not parent directory of output file exists
     + check whether or not the output file can be overwritten (if existing)
 * IntaRNA/general :
   * E_precisionEpsilon : now = sqrt(numeric_limits<E_type>::min())
     (was 1000*numeric_limits<E_type>::epsilon(), which was much too large)
 * IntaRNA/AccessibilityVrna :
   * callbackForStorage() :
     * undo last change, i.e. check for 0-pUvalues now again via '==' instead of
       E_equal
 * IntaRNA/AccessibilityVrna :
 * IntaRNA/InteractionEnergyVrna :
   * construction() :
     * now computation is considered thread-safe, i.e. no omp_critical needed
 * bin/IntaRNA :
   + parallelization of query accessibility computation
 * README.md :
   - non-parallelization of accessibility computation not true anymore

171122 Martin Raden :
 * README.md :
   + discussion and examples for range-based constraint encoding
 * tests/AccessibilityConstraint :
   + test for range-based encoding parsing
 * IntaRNA/IndexRangeList :
   + regexString : string encoding of regex without start/end matching to be
     used in other regex encodings
 * IntaRNA/AccessibilityConstraint :
   + dotBracket_constraints : list of constraint encodings
   + regionIndexList : regular expression string that matches the region list
     for a single constraint encoding
   + regex : overall regex that matches both dotBracketAlphabet as well as
     range-based encodings
   + operator << : prints the constraint in range-based encoding
   * construction :
     + length now mandatory since not necessarily available via constraint 
       string encoding length
     + parsing of range-based encoding with according error messages