@@ -107,14 +107,12 @@ void
 IndexRangeList::
 push_back( const IndexRange& range )
 {
-#if INTARNA_IN_DEBUG_MODE
 	if (!range.isAscending())  {
 		throw std::runtime_error("IndexRangeList::push_back("+toString(range)+") range is not ascending");
 	}
 	if (!list.empty() && list.rbegin()->from >= range.from) {
 		throw std::runtime_error("IndexRangeList::push_back("+toString(range)+") violates order given last range = "+toString(*(list.rbegin())));
 	}
-#endif
 	if (!list.empty() && list.rbegin()->to >= range.from) {
 		INTARNA_NOT_IMPLEMENTED("IndexRangeList::push_back() : overlapping ranges are currently not supported")
 	}
@@ -128,11 +126,9 @@ IndexRangeList::iterator
 IndexRangeList::
 insert( const IndexRange& range )
 {
-#if INTARNA_IN_DEBUG_MODE
 	if (!range.isAscending())  {
 		throw std::runtime_error("IndexRangeList::insert("+toString(range)+") range is not ascending");
 	}
-#endif
 	// add first member to list
 	if (list.empty()) {
 		list.push_back( range );
@@ -230,10 +226,8 @@ reverse( const size_t seqLength )
 	// reverse each entry
 	size_t tmpFrom;
 	for (IndexRangeList::iterator r=begin(); r!=end(); r++) {
-#if INTARNA_IN_DEBUG_MODE
 		// check if reversal is possible
 		if (r->from >= seqLength || r->to >= seqLength) throw std::runtime_error("IndexRangeList::reverse("+toString(seqLength)+") = range "+toString(*r)+" exceeds seqLength");
-#endif
 		// reverse boundaries
 		tmpFrom = r->from;
 		r->from = seqLength -1 - r->to;
